[metadata]
name = algostructure
description = implementation of data structures and algorithms in python
author = Fahim Rustamy
license = MIT
license_file = LICENSE
platforms = unix
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages =
    algostructure
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no